--- a/configs/vqvae.yaml
+++ b/configs/vqvae.yaml
@@ -1,6 +1,6 @@
 # Training
 batch_size: 256
-n_updates: 1
+n_updates: 20000
 learning_rate: 0.0004
 log_interval: 100
 dataset: ZELDA
@@ -25,7 +25,7 @@ start_iteration: 0
 # Performance
 amp: true
 tf32: true
-compile: false
+compile: true
 
 # W&B
 use_wandb: true
