(WIP) file modularization and cleans

--- a/configs/video_tokenizer.yaml
+++ b/configs/video_tokenizer.yaml
@@ -1,14 +1,14 @@
 # Training
 batch_size: 256
-n_updates: 50000
+n_updates: 1
 learning_rate: 0.0004
 log_interval: 2500
-dataset: ZELDA
+dataset: PICODOOM
 context_length: 4
-frame_size: 128
+frame_size: 64
 
 # Model
-patch_size: 8
+patch_size: 4
 embed_dim: 128
 num_heads: 8
 hidden_dim: 256
