--- a/configs/dynamics.yaml
+++ b/configs/dynamics.yaml
@@ -1,22 +1,22 @@
 # Training
 batch_size: 256
-n_updates: 50000
+n_updates: 1
 learning_rate: 0.0001
 log_interval: 2500
-dataset: ZELDA
+dataset: PICODOOM
 context_length: 4
-frame_size: 128
+frame_size: 64
 
 # Model (must match tokenizer)
-patch_size: 8
+patch_size: 4
 embed_dim: 128
 num_heads: 8
 hidden_dim: 256
 num_blocks: 4
 latent_dim: 6
 num_bins: 4
-n_actions: 8
-use_actions: false
+n_actions: 16
+use_actions: true
 
 # Paths
 video_tokenizer_path: null
