--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -1,14 +1,14 @@
 # Pipeline switches
 use_wandb: true
 wandb_project: nano-genie-pipeline
-dataset: ZELDA
+dataset: PICODOOM
 
 # Stage configs
-vqvae_config: configs/vqvae.yaml
+video_tokenizer_config: configs/video_tokenizer.yaml
 lam_config: configs/lam.yaml
 dynamics_config: configs/dynamics.yaml
 
 # Which stages to run
-run_vqvae: true
+run_video_tokenizer: true
 run_lam: true
 run_dynamics: true 
