--- a/configs/training_config.yaml
+++ b/configs/training_config.yaml
@@ -3,6 +3,14 @@ use_wandb: true
 wandb_project: nano-genie-pipeline
 dataset: PICODOOM
 
+# Shared model params
+patch_size: 4
+context_length: 4
+frame_size: 64
+latent_dim: 6 # for video tokenizer
+num_bins: 4 # for video tokenizer
+n_actions: 16
+
 # Stage configs
 video_tokenizer_config: configs/video_tokenizer.yaml
 latent_actions_config: configs/latent_actions.yaml
