--- a/configs/training_config.yaml
+++ b/configs/training_config.yaml
@@ -1,9 +1,9 @@
-# Pipeline switches
+# wandb/ds
 use_wandb: true
 wandb_project: nano-genie-pipeline
 dataset: PICODOOM
 
-# Shared model params
+# shared model params
 patch_size: 4
 context_length: 4
 frame_size: 64
@@ -11,16 +11,12 @@ latent_dim: 6 # for video tokenizer
 num_bins: 4 # for video tokenizer
 n_actions: 16
 
-# Stage configs
+# stage configs
 video_tokenizer_config: configs/video_tokenizer.yaml
 latent_actions_config: configs/latent_actions.yaml
 dynamics_config: configs/dynamics.yaml
 
-# Which stages to run
+# which stages to run
 run_video_tokenizer: true
 run_latent_actions: true
 run_dynamics: true 
-
-# TODO: allow params to be passed down to each stage (hydra?) 
-# at least dataset, compile, tf32, amp, and wandb should be passed down, 
-#and vt to dynamics params like latent dim and num bins
