--- a/configs/dev/dev_training.yaml
+++ b/configs/dev/dev_training.yaml
@@ -3,20 +3,17 @@ use_wandb: true
 wandb_project: nano-genie-pipeline
 dataset: PICODOOM
 
-# Shared model params
+# smaller shared model params
 patch_size: 4
 context_length: 4
 frame_size: 64
 latent_dim: 4 # for video tokenizer
 num_bins: 2 # for video tokenizer
 n_actions: 8
-
-# smaller model params
-patch_size: 4
-embed_dim: 32
-num_heads: 4
-hidden_dim: 64
-num_blocks: 1
+embed_dim: 128
+num_heads: 8
+hidden_dim: 256
+num_blocks: 4
 
 # simplest train settings
 compile: false
