--- a/configs/latent_actions.yaml
+++ b/configs/latent_actions.yaml
@@ -1,15 +1,8 @@
 # Training
 batch_size: 256
-n_updates: 2500
+n_updates: 3000
 learning_rate: 0.001
-log_interval: 100
+log_interval: 500
 
-# Model
-embed_dim: 128
-num_heads: 8
-hidden_dim: 256
-num_blocks: 4
-
-# Save
-save: true
+# resume from checkpoint
 checkpoint: null
