--- a/configs/video_tokenizer.yaml
+++ b/configs/video_tokenizer.yaml
@@ -4,12 +4,5 @@ n_updates: 30000
 learning_rate: 0.0004
 log_interval: 2500
 
-# Model
-embed_dim: 128
-num_heads: 8
-hidden_dim: 256
-num_blocks: 4
-
-# Save/IO
-save: true
+# resume from checkpoint
 checkpoint: null
