--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -1,6 +1,8 @@
-# wandb/ds
+# wandb
 use_wandb: true
 wandb_project: nano-genie-pipeline
+
+# dataset
 dataset: PICODOOM
 
 # shared model params
@@ -20,7 +22,7 @@ num_blocks: 4
 # performance
 amp: true
 tf32: true
-compile: true
+compile: false
 
 # stage configs
 video_tokenizer_config: configs/video_tokenizer.yaml
@@ -28,6 +30,6 @@ latent_actions_config: configs/latent_actions.yaml
 dynamics_config: configs/dynamics.yaml
 
 # which stages to run
-run_video_tokenizer: true
+run_video_tokenizer: false
 run_latent_actions: false
 run_dynamics: true
