--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -4,6 +4,7 @@ wandb_project: nano-genie-pipeline
 
 # dataset
 dataset: PICODOOM
+preload_ratio: 0.1
 
 # shared model params
 patch_size: 4
@@ -30,6 +31,6 @@ latent_actions_config: configs/latent_actions.yaml
 dynamics_config: configs/dynamics.yaml
 
 # which stages to run
-run_video_tokenizer: false
+run_video_tokenizer: true
 run_latent_actions: false
 run_dynamics: true
