clean distributed training, clean dynamics masked frame viz production, README todos

--- a/configs/dynamics.yaml
+++ b/configs/dynamics.yaml
@@ -4,11 +4,11 @@ n_updates: 100000
 learning_rate: 0.001
 log_interval: 2500
 
-use_actions: false
+use_actions: true
 
 # Paths
 video_tokenizer_path: /workspace/nano-genie/results/2025_09_15_10_39_40/video_tokenizer/checkpoints/video_tokenizer_step_27500_2025_09_15_12_33_10.pth
-latent_actions_path:
+latent_actions_path: /workspace/nano-genie/results/2025_09_16_21_23_46/latent_actions/checkpoints/latent_actions_step_2500_2025_09_16_21_37_08.pth
 
 # resume from checkpoint
 checkpoint:
