config cleans, dataset cleans, and inference mode comments

--- a/configs/inference.yaml
+++ b/configs/inference.yaml
@@ -1,28 +1,26 @@
 # paths (need if not get latest)
-video_tokenizer_path: /workspace/nano-genie/results/2025_09_21_06_24_07/video_tokenizer/checkpoints/video_tokenizer_step_9000_2025_09_21_06_59_59.pth
-latent_actions_path:
-dynamics_path: /workspace/nano-genie/results/2025_09_21_18_46_23/dynamics/checkpoints/dynamics_step_52500_2025_09_22_03_31_54.pth
-use_latest_checkpoints: false
+video_tokenizer_path: 
+latent_actions_path: 
+dynamics_path: 
+use_latest_checkpoints: true
 
 # inference params
-dataset: PICODOOM
-preload_ratio: 0.015
-device: cuda
-generation_steps: 20
-context_window: 3
+dataset: PONG
+preload_ratio:
+device: mps # make sure to use correct device
+generation_steps: 10
+context_window: 2
 fps: 2
-temperature: 0.0 # 0 is argmax
+temperature: 0.5 # 0 is argmax
 teacher_forced: false # for testing/dev
 prediction_horizon: 1 # how many masked frames to append and decode at a time
 
-# use random actions or use lam-inferred actions
-use_actions: false
-use_gt_actions: false
+# action selection modes (lower takes priority)
+use_actions: false # use random actions
+use_gt_actions: false # use lam-inferred actions
+use_interactive_mode: true # use user-inputted actions
 
-# user-inputted actions on the fly
-use_interactive_mode: false
-
-# Performance options
-amp: true
-tf32: true
+# inference acceleration
+amp: false
+tf32: false
 compile: false
