--- a/configs/dynamics.yaml
+++ b/configs/dynamics.yaml
@@ -1,5 +1,6 @@
 # Training
-batch_size: 500
+batch_size_per_gpu: 500
+gradient_accumulation_steps: 1
 n_updates: 300000
 learning_rate: 0.01
 log_interval: 2000
