--- a/configs/latent_actions.yaml
+++ b/configs/latent_actions.yaml
@@ -1,5 +1,6 @@
 # Training
-batch_size: 350
+batch_size_per_gpu: 350
+gradient_accumulation_steps: 1
 n_updates: 10000
 learning_rate: 0.0001
 log_interval: 500
