--- a/configs/video_tokenizer.yaml
+++ b/configs/video_tokenizer.yaml
@@ -1,5 +1,6 @@
 # Training
-batch_size: 350
+batch_size_per_gpu: 350
+gradient_accumulation_steps: 1
 n_updates: 40000
 learning_rate: 0.001
 log_interval: 2500
